--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "sqlalchemy (>=2.0.40,<3.0.0)",
-    "pydantic (>=2.11.0,<3.0.0)",
     "black (>=25.1.0,<26.0.0)",
-    "isort (>=6.0.1,<7.0.0)"
+    "isort (>=6.0.1,<7.0.0)",
 ]
 
 [tool.black]
