--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,25 +1,30 @@
 [project]
 name = "sqlatypemodel"
-version = "0.3.0"
-description = ""
+version = "0.4.0"
+description = "Typed JSON fields for SQLAlchemy with automatic mutation tracking"
 authors = [
-    {name = "grehban",email = "maximfeedback19@gmail.com"}
+    {name = "grehban", email = "maximfeedback19@gmail.com"}
 ]
 license = {text = "MIT"}
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.10"
 repository = "https://github.com/GrehBan/sqlatypemodel"
 packages = [{ include = "sqlatypemodel" }]
+
 dependencies = [
-    "sqlalchemy (>=2.0.40,<3.0.0)",
-    "black (>=25.1.0,<26.0.0)",
-    "isort (>=6.0.1,<7.0.0)",
-    "pydantic (>=2.12.5,<3.0.0)"
+    "sqlalchemy (>=2.0.0,<3.0.0)",
+    "pydantic (>=2.0.0,<3.0.0)",
 ]
+
+[tool.poetry.group.dev.dependencies]
+black = "^24.0.0"
+isort = "^5.13.0"
+pytest = "^8.0.0"
+pytest-cov = "^5.0.0"
 
 [tool.black]
 line-length = 79
-target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
+target-version = ['py310', 'py311', 'py312']
 exclude = '''
 (
     \.eggs
