--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.10", "3.11", "3.12", "3.13"]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
 
     steps:
     - uses: actions/checkout@v4
@@ -30,6 +30,10 @@ jobs:
       run: |
         poetry install
         
-    - name: Run tests
+    - name: Run unit tests
       run: |
         poetry run pytest --cov=sqlatypemodel
+
+    - name: Run Forensic Stress Test
+      run: |
+        poetry run python tests/stress_test.py
