--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,30 +1,129 @@
+[build-system]
+requires = ["poetry-core>=2.0.0,<3.0.0"]
+build-backend = "poetry.core.masonry.api"
+
 [project]
 name = "sqlatypemodel"
-version = "0.4.0"
+version = "0.5.0"
 description = "Typed JSON fields for SQLAlchemy with automatic mutation tracking"
+readme = "README.md"
+requires-python = ">=3.10"
+license = {text = "MIT"}
 authors = [
     {name = "grehban", email = "maximfeedback19@gmail.com"}
 ]
-license = {text = "MIT"}
-readme = "README.md"
-requires-python = ">=3.10"
-repository = "https://github.com/GrehBan/sqlatypemodel"
-packages = [{ include = "sqlatypemodel" }]
-
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
+    "Framework :: Pydantic",
+    "Framework :: Pydantic :: 2",
+    "Typing :: Typed",
+]
+# --- ИСПРАВЛЕНИЕ: dependencies перенесены сюда, внутрь [project] ---
 dependencies = [
-    "sqlalchemy (>=2.0.0,<3.0.0)",
-    "pydantic (>=2.0.0,<3.0.0)",
+    "sqlalchemy>=2.0.0,<3.0.0",
+    "pydantic>=2.0.0,<3.0.0",
+]
+
+[project.urls]
+Homepage = "https://github.com/GrehBan/sqlatypemodel/"
+Documentation = "https://github.com/GrehBan/sqlatypemodel/"
+Repository = "https://github.com/GrehBan/sqlatypemodel/"
+
+[tool.poetry]
+packages = [
+    { include = "sqlatypemodel"}
 ]
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.0.0"
-isort = "^5.13.0"
+ruff = "^0.1.0"
+mypy = ">=1.19.1,<2.0.0"
 pytest = "^8.0.0"
-pytest-cov = "^5.0.0"
+
+[tool.ruff]
+line-length = 79
+src = ["sqlatypemodel", "tests"]
+target-version = "py310"
+exclude = [
+    ".git",
+    "build",
+    "dist",
+    "venv",
+    ".venv",
+    "docs",
+    "dev",
+    "scripts",
+    "*.egg-info",
+]
+
+[tool.ruff.lint]
+select = [
+    "E",   # pycodestyle errors
+    "F",   # pyflakes
+    "C4",  # flake8-comprehensions
+    "Q",   # flake8-quotes
+    "RET", # flake8-return
+    "I",   # isort (встроен в ruff)
+    "UP",  # pyupgrade
+    "T10", # flake8-debugger
+]
+ignore = []
+
+[tool.ruff.lint.isort]
+known-first-party = ["sqlatypemodel"]
+
+[tool.ruff.lint.per-file-ignores]
+"tests/*" = ["E501", "S101"]
+"sqlatypemodel/__init__.py" = ["F401"]
+
+[tool.mypy]
+plugins = [
+    "pydantic.mypy",
+    "sqlalchemy.ext.mypy.plugin"
+]
+python_version = "3.10"
+show_error_codes = true
+show_error_context = true
+pretty = true
+ignore_missing_imports = false
+warn_unused_configs = true
+disallow_subclassing_any = true
+disallow_any_generics = true
+disallow_untyped_calls = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+check_untyped_defs = true
+disallow_untyped_decorators = true
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_return_any = true
+follow_imports_for_stubs = true
+namespace_packages = true
+show_absolute_path = true
+
+[[tool.mypy.overrides]]
+module = ["pytest.*"]
+ignore_missing_imports = true
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+filterwarnings = [
+    "error",
+    "ignore::pytest.PytestUnraisableExceptionWarning",
+    "ignore::DeprecationWarning:sqlalchemy.*",
+]
 
 [tool.black]
 line-length = 79
-target-version = ['py310', 'py311', 'py312']
+target-version = ['py310', 'py311', 'py312', 'py313', 'py314']
 exclude = '''
 (
     \.eggs
@@ -39,7 +138,4 @@ exclude = '''
 
 [tool.isort]
 profile = "black"
-
-[build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
+line_length = 79
