--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ black = "^24.0.0"
 ruff = "^0.1.0"
 mypy = ">=1.19.1,<2.0.0"
 pytest = "^8.0.0"
+pytest-cov = "^5.0.0" 
 
 [tool.ruff]
 line-length = 79
