--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,9 @@ pytest-cov = "^5.0.0"
 hypothesis = "^6.148.7"
 attrs = "^25.4.0"
 pydantic = "^2.12.5"
+pytest-benchmark = "^5.2.3"
+aiosqlite = "^0.22.0"
+pytest-asyncio = "^1.3.0"
 
 [tool.ruff]
 line-length = 79
