--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,13 +27,14 @@ classifiers = [
 ]
 dependencies = [
     "sqlalchemy>=2.0.0,<3.0.0",
+    "orjson (>=3.11.5,<4.0.0)",
 ]
 packages = [
     { include = "sqlatypemodel"}
 ]
 
 [project.optional-dependencies]
-fast = ["orjson>=3.9.0"]
+fast = ["orjson>=3.11.5"]
 
 [project.urls]
 Homepage = "https://github.com/GrehBan/sqlatypemodel/"
@@ -52,6 +53,7 @@ pydantic = "^2.12.5"
 pytest-benchmark = "^5.2.3"
 aiosqlite = "^0.22.0"
 pytest-asyncio = "^1.3.0"
+orjson = ">=3.11.5"
 
 [tool.ruff]
 line-length = 79
